--- a/src/ComponentsArea.css
+++ b/src/ComponentsArea.css
@@ -1,7 +1,7 @@
 .containers {
   width: 250px;
   height: 180px;
-  background-color: rgb(159, 203, 249);
+  background-color: #0876B4;
   float: right;
   margin: 5px;
   margin-top: 2.5%;
