--- a/src/Button.css
+++ b/src/Button.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100px;
   color: white;
-  background-color: rgb(216, 101, 62);
+  background-color: #B4C5E4;
   font-size: 2rem;
   font-family: system-ui;
   display: inline-grid;
