--- a/src/ComponentsArea.css
+++ b/src/ComponentsArea.css
@@ -14,9 +14,9 @@
 
 #title {
   font-family: 'Raleway', sans-serif;
-  display: inline-block;
+  display: block;
   margin-left: 35%;
-  width: 100%;
+  /* width: 100%; */
 }
 
 #componentView {
@@ -38,4 +38,16 @@
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+#headline {
+  display: block;
+}
+
+#filePathDisplay {
+  font-family: 'Raleway', sans-serif;
+  display: block;
+  font-size: 1.25rem;
+  width: 100%;
+  margin-left: 10px;
 }
