--- a/src/ComponentsArea.css
+++ b/src/ComponentsArea.css
@@ -13,7 +13,9 @@
 }
 
 #title {
-  font-family: 'Raleway', sans-serif;
+  font-family: roboto,
+  sans-serif;
+  ;
   display: block;
   margin-left: 35%;
   /* width: 100%; */
@@ -32,7 +34,7 @@
   color: white;
   font-size: 1rem;
   text-align: center;
-  font-family: system-ui;
+  font-family: roboto, sans-serif;
   position: relative;
   float: left;
   top: 40%;
@@ -45,7 +47,7 @@
 }
 
 #filePathDisplay {
-  font-family: 'Raleway', sans-serif;
+  font-family: roboto,sans-serif;
   display: block;
   font-size: 1.25rem;
   width: 100%;
