--- a/src/ComponentsArea.css
+++ b/src/ComponentsArea.css
@@ -6,6 +6,9 @@
   margin: 5px;
   margin-top: 2.5%;
   display: block;
+  -webkit-box-shadow: 7px 7px 24px -4px rgba(0, 0, 0, 0.69);
+  -moz-box-shadow: 7px 7px 24px -4px rgba(0, 0, 0, 0.69);
+  box-shadow: 7px 7px 24px -4px rgba(0, 0, 0, 0.69);
 }
 
 .containers:hover {
@@ -13,9 +16,7 @@
 }
 
 #title {
-  font-family: roboto,
-  sans-serif;
-  ;
+  font-family: 'Roboto', sans-serif;
   display: block;
   margin-left: 35%;
   /* width: 100%; */
@@ -25,7 +26,7 @@
   background-color: white;
   float: right;
   height: 100%;
-  width: 85%;
+  width: 80%;
   display: block;
   top: 0;
 }
@@ -34,7 +35,7 @@
   color: white;
   font-size: 1rem;
   text-align: center;
-  font-family: roboto, sans-serif;
+  font-family: 'Roboto', sans-serif;
   position: relative;
   float: left;
   top: 40%;
@@ -47,7 +48,7 @@
 }
 
 #filePathDisplay {
-  font-family: roboto,sans-serif;
+  font-family: 'Roboto', sans-serif;
   display: block;
   font-size: 1.25rem;
   width: 100%;
