--- a/src/Button.css
+++ b/src/Button.css
@@ -1,21 +1,17 @@
 .button {
-  width: 85%;
-  height: 50px;
-  color: rgba(255, 255, 255, 0.76);
-  background-color: #333645;
-  font-size: 13px;
-  font-weight: 200;
-  font-family: 'Roboto', sans-serif;
+  width: 100%;
+  height: 100px;
+  color: white;
+  background-color: #B4C5E4;
+  font-size: 1.4rem;
+  font-family: system-ui;
   display: inline-grid;
   outline: none;
-  text-align: left;
-  padding-left: 15%;
-  padding-top: 10%;
 }
 
 .button:hover {
-  background-color: #1a1c24;
-  transition: .5s;
+  background-color: rgb(209, 215, 226);
+  color: rgb(130, 118, 114);
 }
 
 #openFolder {
@@ -24,6 +20,6 @@
   font-size: 1.25rem;
   height: 50px;
   color: white;
-  font-family: 'Roboto', sans-serif;
+  font-family: system-ui;
   outline: none;
 }
