--- a/src/Controls.css
+++ b/src/Controls.css
@@ -1,8 +1,9 @@
 #controlsBar {
   border: 1px solid black;
-  width: 15%;
+  width: 20%;
   height: 100%;
   position: fixed;
+  background-color: #333645;
 }
 
 #filePathInput {
