--- a/src/Button.css
+++ b/src/Button.css
@@ -1,5 +1,5 @@
 .button {
-  width: 85%;
+  width: 100%;
   height: 50px;
   color: rgba(255, 255, 255, 0.76);
   background-color: #333645;
@@ -10,12 +10,14 @@
   outline: none;
   text-align: left;
   padding-left: 15%;
+  border-style: none;
   padding-top: 10%;
 }
 
 .button:hover {
   background-color: #1a1c24;
   transition: .5s;
+  cursor: pointer;
 }
 
 #openFolder {
