slightly rounded containers

--- a/src/ComponentsArea.css
+++ b/src/ComponentsArea.css
@@ -2,6 +2,7 @@
   width: 250px;
   height: 180px;
   background-color: #0876B4;
+  border-radius: 5px;
   float: right;
   margin: 5px;
   margin-top: 2.5%;
