--- a/src/ComponentsArea.css
+++ b/src/ComponentsArea.css
@@ -32,6 +32,7 @@
   width: 85%;
   display: block;
   top: 0;
+  overflow: hidden;
 }
 
 .containerText {
@@ -56,4 +57,18 @@
   font-size: .8rem;
   width: 100%;
   margin-left: 10px;
+}
+
+.directoryItem {
+  font-size: 1.25rem;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 200;
+  margin: 20px;
+  padding: 10px;
+  transition: .5s;
+}
+
+.directoryItem:hover {
+  background-color: rgb(89, 123, 168);
+  color: white;
 }
