--- a/src/HeaderArea.css
+++ b/src/HeaderArea.css
@@ -1,13 +1,17 @@
 #header {
   height: 50px;
   box-shadow: 0px 1px 5px 0px rgba(214,206,214,1);
+  position: fixed;
+  display:block;
+  float: right;
+  width: 100%;
 }
 
 #clearHistory {
   float: right;
-  margin-right: 10px;
+  margin-left: 90%;
   margin-top: 12px;
-  position: relative;
+  position: fixed;
   padding: 5px;
   color: white;
   background-color: rgb(52, 175, 216);
