--- a/src/ComponentsArea.css
+++ b/src/ComponentsArea.css
@@ -20,6 +20,13 @@
   background-color: rgb(107, 135, 206);
 }
 
+.composeBox {
+  height: 192px;
+  display: block;
+  background-image: linear-gradient(45deg, #FFFFFF 25%, #e7f5fe 25%, #e7f5fe 50%, #FFFFFF 50%, #FFFFFF 75%, #e7f5fe 75%, #e7f5fe 100%);
+background-size: 60.00px 60.00px;
+}
+
 #title {
   position: fixed;
 
