--- a/src/ComponentsArea.css
+++ b/src/ComponentsArea.css
@@ -27,6 +27,13 @@
 background-size: 60.00px 60.00px;
 }
 
+.contLabel {
+  margin-left: 10px;
+  color: darkgray;
+  text-transform: uppercase;
+  font-family: 'Roboto', sans-serif;
+}
+
 #title {
   position: fixed;
 
