--- a/src/Controls.css
+++ b/src/Controls.css
@@ -1,3 +1,13 @@
+.categoriesText {
+  padding-left: 40px;
+
+  color: rgb(66, 223, 244);
+
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.15rem;
+  font-weight: 300;
+}
+
 #controlsBar {
   position: fixed;
 
