--- a/src/Controls.css
+++ b/src/Controls.css
@@ -1,7 +1,7 @@
 .categoriesText {
   padding-left: 40px;
 
-  color: rgb(66, 223, 244);
+  color: #B7B5E4;
 
   font-family: 'Roboto', sans-serif;
   font-size: 1.15rem;
