--- a/src/HeaderArea.css
+++ b/src/HeaderArea.css
@@ -4,7 +4,7 @@
   float: right;
 
   margin-top: 12px;
-  margin-left: 90%;
+  margin-left: 80%;
   padding: 5px;
 
   cursor: pointer;
@@ -14,7 +14,7 @@
   border: 0;
   border-radius: 5px;
   outline: none;
-  background-color: rgb(52, 175, 216);
+  background-color: rgb(255, 0, 25);
 
   font-family: "Roboto", sans-serif;
   font-size: .85rem;
@@ -22,7 +22,8 @@
 }
 
 .actionBtn:hover {
-  background-color: rgb(216, 32, 57);
+  color: rgb(255, 0, 25);
+  background-color: white;
 }
 
 #header {
